--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,10 @@ version: "3.2"
 
 services:
   node:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: ./docker/node/Dockerfile
-    volumes:
-    # https://stackoverflow.com/a/32785014/232619
-      - .:/app
-      - /app/node_modules
     command: /usr/local/wait-for-it.sh mongo:27017 -- npm start
     env_file:
       - .env
