--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -1,14 +1,11 @@
-FROM node:16-alpine
+FROM node:18
 
-# add bash
-RUN apk update
-RUN apk upgrade
-RUN apk add bash
-
+RUN echo helloworld
 WORKDIR /app
-# https://stackoverflow.com/a/32785014/232619
+COPY package.json yarn.lock .
+RUN yarn install
+
 COPY . /app
-RUN npm install
 COPY ./docker/wait-for-it.sh /usr/local
 RUN chmod +x /usr/local/wait-for-it.sh
 
